2005-07-03  Douglas Bates  <bates@bates1-home>

	* src/lmer.c (glmer_devAGQ): Added AGQ for single grouping factor,
	unidimensional case.

2005-06-08  Douglas Bates  <bates@bates1-home>

	* DESCRIPTION (Version): 0.96-1

	* moved  lmer-class' R and C code moved from lme4 to here

2005-06-04  Douglas Bates  <bates@bates1-home>

	* R/dgCMatrix.R: Call to csc_matrix_mm used undefined arguments
	(reported by Guissepe Ragusa <gragusa@ucsd.edu>)

2005-06-02  Douglas Bates  <bates@bates1-home>

	* src/Makefile.win: Forgot to update this when Makefile changed.

2005-05-11  Douglas Bates  <bates@bates1-home>

	* src/dgCMatrix.c (csc_transpose): Simplified function fixing a
	bug reported by Kurt Hornik and Michael Hahsler.

2005-05-10  Douglas Bates  <bates@bates1-home>

	* src/lgCMatrix.c (Matrix_lgClgCmm): Implementation of methods for
	logical sparse matrices.  These will also be used in the symbolic
	analysis for lmer objects.

	* src/dsCMatrix.c (dsCMatrix_matrix_solve): Copied the dimensions
	of b to the result.  Fixes bug reported by Jean.Coursol@math.u-psud.fr

2005-05-06  Douglas Bates  <bates@bates1-home>

	* src/dgeMatrix.c (dgeMatrix_colsums): Added an implementation of
	colMeans, colSums, rowMeans and rowSums.

2005-04-18  Douglas Bates  <bates@bates1-home>

	* src/lgCMatrix.[ch]: code for _validate method and stub for
	multiplication operation.

	* src/dgeMatrix.c (dgeMatrix_matrix_solve): Passing wrong argument
	to dgetrs.

	* src/init.c: Fix cut-and-paste error in definition of
	dgeMatrix_matrix_solve

	* src/{many files}: Tighten code by using ALLOC_SLOT.

2005-04-15  Douglas Bates  <bates@bates1-home>

	* R/AllClass.R: Add lgTMatrix and lgCMatrix classes

	* DESCRIPTION: Eliminate import of stats.


2005-04-06  Douglas Bates  <bates@bates1-home>

	* R/AllClass.R : add logical sparse matrix classes

2005-04-01  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dgTMatrix.R: add "[" method for triplet matrices