@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 0.97-1
-Date: 2005-07-04
+Version: 0.97-2
+Date: 2005-07-06
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
