@@ -1,3 +1,9 @@
+2005-07-05  Douglas Bates  <bates@bates1-home>
+
+	* R/lmer.R (lmer): stored updated variance component estimates in
+	mer object for the generalized model.  (Bug reported by Renaud
+	Lancelot).
+
 2005-07-03  Douglas Bates  <bates@bates1-home>
 
 	* src/lmer.c (glmer_devAGQ): Added AGQ for single grouping factor,
